user_service needs work

--- a/CSE-601: Distributed Systems/Mini LinkedIn/Distributed/user_service/.env
+++ b/CSE-601: Distributed Systems/Mini LinkedIn/Distributed/user_service/.env
@@ -1,7 +1,7 @@
 # user-service environment variables
 
 # Database Configuration
-DATABASE_URL=postgresql://user_db_username:user_db_password@user_db_host:user_db_port/user_db_name
+DATABASE_URL = postgresql://postgres:1234@localhost:5432/User
 
 # JWT Secret Key (for token generation)
 JWT_SECRET_KEY=mysecretkey
