user microservice works

--- a/CSE-601: Distributed Systems/Mini LinkedIn/Distributed/user_service/.env
+++ b/CSE-601: Distributed Systems/Mini LinkedIn/Distributed/user_service/.env
@@ -1,11 +1,11 @@
-# user-service environment variables
+# # user-service environment variables
 
-# Database Configuration
-DATABASE_URL = postgresql://postgres:1234@localhost:5432/User
+# # Database Configuration
+# DATABASE_URL = postgresql://postgres:1234@localhost:5432/User
 
-# JWT Secret Key (for token generation)
-JWT_SECRET_KEY=mysecretkey
+# # JWT Secret Key (for token generation)
+# JWT_SECRET_KEY=mysecretkey
 
-# FastAPI Settings
-FASTAPI_HOST=0.0.0.0
-FASTAPI_PORT=8001
+# # FastAPI Settings
+# FASTAPI_HOST=0.0.0.0
+# FASTAPI_PORT=8001
